--- a/public_html/css/swag.css
+++ b/public_html/css/swag.css
@@ -384,16 +384,6 @@ box-shadow: 0px 0px 20px .3px #999 !important;
 border-right: 1px solid #aaa;
 }
 
-#avatar {
-height: 126px;
-width: 126px;
-background-size: cover !important;
-background-position: center center;
-border: 1px solid #222;
-float:left;
-margin-right: 10px;
-}
-
 h2.name {
 	font-size: 22px;
 	position: relative;
@@ -401,18 +391,6 @@ h2.name {
 	color: #000;
 	font-weight: 700;
 	font-style: italic;
-}
-
-.avatar-container {
-padding: 5px;
-background: #fff;
-border: 1px solid #aaa;
-margin: 10px auto;
-width: 213px;
-box-shadow: 0px 0px 10px 2px #aaa;
-border-radius: 4px;
-height: 140px;
-width: 140px;
 }
 
 .main-logo {
@@ -1011,10 +989,14 @@ border:1px;
 }
 
 #calculate {
-	padding: 10px 20px;
-border-radius: 2px;
-margin-right: 5px;
-border: 1px solid #036C8E;
+	padding: 10px 40px 10px 0;
+	background: transparent;
+	margin-right: 5px;
+	text-transform: uppercase;
+	color: #000;
+	border-bottom: 2px solid #f00;
+	text-align: left;
+	font-weight: bold;
 }
 
 .buttonSuccess {
@@ -1093,7 +1075,7 @@ width: 100vw;
 
 .stats-input {
 	color: #222 !important;
-	padding: 1em 1em 1em 0;
+	padding: 0 1em 1em 0;
 }
 
 .stats-input .title {
@@ -1115,7 +1097,7 @@ width: 100vw;
 	font-weight: 400;
 	text-transform: uppercase;
 	font-size: 1.5em;
-	border-bottom: 2px solid red;
+	border-bottom: 2px solid rgba(255,0,0,.1);
 }
 
 .stats-input .bullet-item {
@@ -1272,7 +1254,89 @@ p.disclaimer {
 	padding-top: 3em;
 }
 
+.requirements-table {
+	margin-top: 2em;
+}
 
+.header-row {
+	border-bottom: 4px solid rgba(255,0,0,.1);
+}
+
+.stats-input button.btnSave {
+	padding: 10px 40px 10px 0;
+	background: transparent;
+	margin-right: 5px;
+	text-transform: uppercase;
+	color: #000;
+	border-bottom: 2px solid #f00;
+	text-align: left;
+	font-weight: bold;
+	float: right;
+}
+
+.stats-input button.btnSave, .stats-input #calculate {
+	width: 48%;
+}
+
+
+
+.recommendedProducts .product {
+	border-bottom: 1px solid #ccc;
+	margin-bottom: 2em;
+	opacity: .5;
+	transition: all .25s;
+	-webkit-transition: all .25s;
+	-moz-transition: all .25s;
+	-o-tansition: all .25s;
+}
+
+.recommendedProducts .product .purchase {
+	color: #000;
+	border-bottom: 2px solid #f00;
+	display: block;
+	padding: 10px 0;
+	width: 100%;
+	font-weight: bold;
+	text-transform: uppercase;
+	text-align: left;
+	margin-top: 1.5em;
+	margin-bottom: 2em;
+	background: transparent;
+}
+
+.recommendedProducts .product:hover {
+	opacity: 1;
+}
+
+.recommendedProducts .product:first-child {
+	margin-top: 2em;
+}
+
+.recommendedProducts .product:last-child {
+	border: 0;
+}
+
+
+
+
+#avatar {
+	height: 126px;
+	width: 126px;
+	background-size: cover !important;
+	background-position: center center;
+	border: 1px solid #222;
+	float:left;
+}
+
+.avatar-container {
+	padding: 5px;
+	background: #fff;
+	float: left;
+	margin-left: 0.9375rem;
+	margin-right: 2em;
+	border: 1px solid #aaa;
+	box-shadow: 0px 0px 10px 2px #aaa;
+}
 
 
 /*   NAVIGATIONAL TILES  */
